update editor toolbar

--- a/generator/edit.html
+++ b/generator/edit.html
@@ -56,15 +56,22 @@
                         <option aria-label="Heading 2" value="2"></option>
                         <option aria-label="Heading 3" value="3"></option>
                     </select>
-                    <select aria-label="Align" class="ql-align">
+                    <!-- <select aria-label="Align" class="ql-align">
                         <option aria-label="Left" selected></option>
                         <option aria-label="Center" value="center"></option>
                         <option aria-label="Right" value="right"></option>
                         <option aria-label="Justify" value="justify"></option>
-                    </select>
+                    </select> -->
+                </span>
+                <!-- Align buttons -->
+                <span class="ql-formats">
+                    <button aria-label="Align Left" type="button" class="ql-align" value=""></button>
+                    <button aria-label="Align Center" type="button" class="ql-align" value="center"></button>
+                    <button aria-label="Align Right" type="button" class="ql-align" value="right"></button>
+                    <button aria-label="Align Justify" type="button" class="ql-align" value="justify"></button>
                 </span>
                 <!-- Subscript and superscript buttons -->
-                <span class="ql-formats" style="display: none;">
+                <span class="ql-formats">
                     <button type="button" class="ql-script" value="sub"></button>
                     <button type="button" class="ql-script" value="super"></button>
                 </span>
