Fix footer closing tag in edit.html

--- a/generator/edit.html
+++ b/generator/edit.html
@@ -356,12 +356,12 @@
                 <p style="font-size: 1rem; font-weight: 600; text-wrap: balance;">This template contains general information and should not
                     be considered legal advice.</p>
                 <p>View on <a href="https://github.com/nonsalant/contract/">GitHub</a>. Built by <a
-                        href="https://twitter.com/nonsalant">Stefan Matei</a>.</p>
+                        href="https://stefanmatei.com">Stefan Matei</a>.</p>
             </div>
 
         </div>
 
-    </foot>
+    </footer>
 
 
     <!-- svg icon data -->
